Implement real tensor-network backend and engine updates